crates/toml/tests/snapshots/invalid/table/duplicate-key-10.stderr
TOML parse error at line 2, column 1
  |
2 | [[a.b]]
  | ^
invalid table header
dotted key `a` attempted to extend non-table type (array)
